--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "~/*": ["src/*"],      
       "@core/*": ["src/app/core/*"],
       "@shared/*": ["src/app/shared/*"],
+      "@modules/*": ["src/app/modules/*"],
       "@environments/*": ["src/environments/*"],
       "@assets/*": ["src/assets/*"],
       "*": ["./node_modules/*"]
